[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
genawaiter = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
task = { path = "./task" }
itertools = "0.10.0"
counter = "0.5.7"
num = "0.4.1"
nalgebra = "0.32.3"
num-complex = "0.4.4"
const_fn = "0.4.9"
lazy_static = "1.4.0"
num-traits = "0.2.17"
ndarray = "0.15.6"

[[bin]]
name = "day01"
path = "src/bin/day01.rs"

[[bin]]
name = "day02"
path = "src/bin/day02.rs"

[[bin]]
name = "day03"
path = "src/bin/day03.rs"

[[bin]]
name = "day04"
path = "src/bin/day04.rs"

[[bin]]
name = "day05"
path = "src/bin/day05.rs"

[lib]
name = "aoc"
path = "src/aoc/mod.rs"

